[gd_scene load_steps=7 format=3 uid="uid://bscwcd3rfuhpq"]

[ext_resource type="Script" path="res://Scripts/menu_main.gd" id="1_pvfj4"]
[ext_resource type="Texture2D" uid="uid://k6kfbpfiigrf" path="res://Art/BG/bg_space.png" id="2_8cigt"]
[ext_resource type="Texture2D" uid="uid://dg8shutpn8x8k" path="res://Art/Doc/miniVisa_B.png" id="3_8kn28"]
[ext_resource type="PackedScene" uid="uid://dyxxr6l5pv8pk" path="res://Scenes/menu_options.tscn" id="3_26sd0"]
[ext_resource type="Texture2D" uid="uid://bpyala5yk0ct7" path="res://Art/Doc/miniVisa_A.png" id="3_e0s2o"]
[ext_resource type="FontFile" uid="uid://dyobdtv742aeo" path="res://fonts/TT Interphases Pro Trial Bold Italic.ttf" id="5_7uy4w"]

[node name="menu_main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pvfj4")
metadata/_edit_use_anchors_ = true

[node name="space_texture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = -958.0
offset_top = -218.0
offset_right = 2882.0
offset_bottom = 1942.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_8cigt")

[node name="label_title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_top = 62.0
offset_right = 500.0
offset_bottom = 562.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("5_7uy4w")
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "[center] Undetermined Title [/center]"

[node name="button_play" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -145.0
offset_top = 262.0
offset_right = 145.0
offset_bottom = 418.0
grow_horizontal = 2
texture_normal = ExtResource("3_8kn28")
texture_hover = ExtResource("3_e0s2o")

[node name="label_play" type="RichTextLabel" parent="button_play"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("5_7uy4w")
text = "Play
"

[node name="button_options" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -78.0
offset_right = 145.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_8kn28")
texture_hover = ExtResource("3_e0s2o")

[node name="label_options" type="RichTextLabel" parent="button_options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -20.0
offset_right = 32.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("5_7uy4w")
text = "Options
"

[node name="button_credits" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = 122.0
offset_right = 145.0
offset_bottom = 278.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_8kn28")
texture_hover = ExtResource("3_e0s2o")

[node name="label_credits" type="RichTextLabel" parent="button_credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -20.0
offset_right = 30.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("5_7uy4w")
text = "Credits
"

[node name="button_quit" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.0
offset_top = -218.0
offset_right = 145.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("3_8kn28")
texture_hover = ExtResource("3_e0s2o")

[node name="label_quit" type="RichTextLabel" parent="button_quit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("5_7uy4w")
text = "Quit
"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="menu_options" parent="CanvasLayer" instance=ExtResource("3_26sd0")]
visible = false

[connection signal="pressed" from="button_play" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="button_options" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="button_quit" to="." method="_on_button_quit_pressed"]
